# gns

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/refactor/: CLAUDE.md  README.ja.md  README.md  equivalence-testing-overview.ja.md  equivalence-testing-overview.md  equivalence-testing-plan.ja.md  equivalence-testing-plan.md  initial-issues.ja.md  initial-issues.md  plan.ja.md  plan.md  refactoring-policy.ja.md  refactoring-policy.md  refactoring-results.ja.md  refactoring-results.md  structure-migration.md  tasks.ja.md  tasks.md
docs/refactor/decisions/: 0001-keep-learned-simulator-as-nn-module.ja.md  0001-keep-learned-simulator-as-nn-module.md  0002-type-annotation-fixes.ja.md  0002-type-annotation-fixes.md  0003-step5-redesign-detailed-plan.ja.md  0003-step5-redesign-detailed-plan.md  0004-revert-step2-architecture-separation.ja.md  0004-revert-step2-architecture-separation.md  0005-fix-rollout-docstring-shape-mismatch.ja.md  0005-fix-rollout-docstring-shape-mismatch.md
docs/refactor/reports/: 20260109-equivalence-test-report.ja.md  20260109-equivalence-test-report.md
gns/: config.py  graph_model.py  inference_utils.py  learned_simulator.py  render.py  rollout.py  train.py  train_multinode.py  training.py
scripts/: README.md  gns_render_rollout.py  gns_train.py  gns_train_multinode.py
